force-app/main/default/objects/Registrations_Exam__c/Registrations_Exam__c.object-meta.xml
<CustomObject>
    <description>Used record FLC and Garment exams</description>
    <label>Registrations Exam</label>
    <nameField>
        <displayFormat>EX-{000000}</displayFormat>
        <label>Exam Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations Exams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>