force-app/main/default/objects/Registrations_Exam__c/fields/Attendee_email__c.field-meta.xml
<CustomField>
    <fullName>Attendee_email__c</fullName>
    <formula>IF(ISBLANK(Ownership__r.Email__c), Registration_Account__r.Email_Address__c , Ownership__r.Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee email</label>
    <type>Text</type>
</CustomField>