force-app/main/default/objects/Registrations_Exam__c/fields/Attendee_name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_name__c</fullName>
    <formula>IF(ISBLANK(Ownership__r.First_Name__c), Registration_Account__r.First_Name__c +' '+ Registration_Account__r.Last_Name__c , Ownership__r.First_Name__c +' '+  Ownership__r.Last_Name__c)</formula>
    <label>Attendee name</label>
    <type>Text</type>
</CustomField>