force-app/main/default/objects/Registrations_Exam__c/fields/Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Date__c</fullName>
    <description>Exam date for Garment and FLC</description>
    <inlineHelpText>Enter Exam Date</inlineHelpText>
    <label>Exam Date</label>
    <type>Date</type>
</CustomField>