force-app/main/default/objects/Registrations_Exam__c/fields/Exam_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Exam_Disposition__c</fullName>
    <inlineHelpText>Select from Pick list</inlineHelpText>
    <label>Exam Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Not Taken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>