force-app/main/default/objects/Registrations_Exam__c/fields/Exam_Name__c.field-meta.xml
<CustomField>
    <fullName>Exam_Name__c</fullName>
    <description>Enter Exam Name - FLC or Garment</description>
    <inlineHelpText>Enter Exam Name - FLC or Garment</inlineHelpText>
    <label>Exam Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>