force-app/main/default/objects/Registrations_Exam__c/fields/Exam_Type__c.field-meta.xml
<CustomField>
    <fullName>Exam_Type__c</fullName>
    <label>Exam Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>