force-app/main/default/objects/Registrations_Exam__c/fields/Exam_Version__c.field-meta.xml
<CustomField>
    <fullName>Exam_Version__c</fullName>
    <description>Exam version</description>
    <inlineHelpText>Enter Exam Version</inlineHelpText>
    <label>Exam Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>