force-app/main/default/objects/Registrations_Exam__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <inlineHelpText>Select from Pick List</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Englisih</fullName>
                <isActive>false</isActive>
                <label>Englisih</label>
            </value>
            <value>
                <fullName>Kevin</fullName>
                <isActive>false</isActive>
                <label>Kevin</label>
            </value>
            <value>
                <fullName>Norman</fullName>
                <isActive>false</isActive>
                <label>Norman</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Sung S Song</fullName>
                <isActive>false</isActive>
                <label>Sung S Song</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>