force-app/main/default/objects/Registrations_Exam__c/fields/Number_of_Exam_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Exam_Attempt__c</fullName>
    <inlineHelpText>Select from pick list</inlineHelpText>
    <label>Number of Exam Attempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>