force-app/main/default/objects/Registrations_Exam__c/fields/Other_Language__c.field-meta.xml
<CustomField>
    <fullName>Other_Language__c</fullName>
    <inlineHelpText>Enter Other Languages</inlineHelpText>
    <label>Other Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>