force-app/main/default/objects/Registrations_Exam__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Ownership__c object</description>
    <label>Ownership</label>
    <referenceTo>Ownership__c</referenceTo>
    <relationshipLabel>Registrations Exams</relationshipLabel>
    <relationshipName>Registrations_Exam</relationshipName>
    <type>Lookup</type>
</CustomField>