force-app/main/default/objects/Registrations_Exam__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <formula>Ownership__r.Registration__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration</label>
    <type>Text</type>
</CustomField>