force-app/main/default/objects/Registrations_Exam__c/fields/Registration_Account__c.field-meta.xml
<CustomField>
    <fullName>Registration_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Account</label>
    <referenceTo>Registration_Account__c</referenceTo>
    <relationshipLabel>Registrations Exams</relationshipLabel>
    <relationshipName>Registrations_Exams</relationshipName>
    <type>Lookup</type>
</CustomField>