force-app/main/default/objects/Registrations_Exam__c/fields/Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Registration_Id__c</fullName>
    <formula>IF(ISBLANK(Ownership__c), Registration_Account__r.Registration__r.Id , Ownership__r.Registration__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Id</label>
    <type>Text</type>
</CustomField>